added more links

--- a/Resources.html
+++ b/Resources.html
@@ -6,8 +6,11 @@
 <body>
  <h1> Resources </h1>
     <p> Go to  
-        <a href = "https://mail.holynames-sea.org"> HNA Sharepoint </a> </p>
-    
+        <a href = "https://www.outlook.com"> HNA Sharepoint </a> </p>
+    <p> Go to
+        <a href = "https://www.holynames-sea.org" > Holy Names Academy</a> website </p>
+    <p> Go to
+        <a href = "https://sms.holynames-sea.org" > Power School </a> </p>
 </body>
 
 </html>
