added outline for different classes

--- a/Resources.html
+++ b/Resources.html
@@ -5,11 +5,11 @@
 </head>
 <body>
  <h1> Resources </h1>
-    <p> Go to  
+    <p> Link to  
         <a href = "https://www.outlook.com"> HNA Sharepoint </a> </p>
-    <p> Go to
+    <p> Link to
         <a href = "https://www.holynames-sea.org" > Holy Names Academy</a> website </p>
-    <p> Go to
+    <p> Link to
         <a href = "https://sms.holynames-sea.org" > Power School </a> </p>
 </body>
 
