added links to rules and added background color plus image

--- a/Languages.html
+++ b/Languages.html
@@ -4,8 +4,9 @@
 <title> Languages </title>
 </head>
 <body>
-
-    
+    <h1> Quick Links </h1>
+    <p> Link to
+        <a href = "https://www.vhlcentral.com/" > VHL Central </a></p>
 </body>
 
 </html>
