--- a/Resources.html
+++ b/Resources.html
@@ -6,11 +6,12 @@
 <body>
  <h1> Resources </h1>
     <p> Link to  
-        <a href = "https://www.outlook.com"> HNA Sharepoint </a> </p>
+        <a href = "https://login.microsoftonline.com"> HNA Sharepoint </a> </p>
     <p> Link to
         <a href = "https://www.holynames-sea.org" > Holy Names Academy</a> website </p>
     <p> Link to
         <a href = "https://sms.holynames-sea.org" > Power School </a> </p>
+    
 </body>
 
 </html>
