--- a/Rules.html
+++ b/Rules.html
@@ -4,7 +4,11 @@
 <title> Rules </title>
 </head>
 <body>
-
+    <h1> Quick Reminders </h1>
+    <p> Dress Code:
+        <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#dress" > Click here to learn more about dress code </a></p>
+    <p> Parking Guidelines:
+        <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#parking" > Click here to learn more about parking guidelines </a></p>
     
 </body>
 
