--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-<title> HNA Website</title>   
-<body>
+<title> HNA Website</title>  
+<head>
+    <style>
+        ul#classes li {
+                    display:inline;
+                }
+    </style>
+</head>
+<head>
+    <style>
+  img { width:100%; }
+</style>
+</head>
+<body background="hna.jpg">
+    
     <h1 style="color: maroon">      
         Cougars Homework Help
     </h1>
     
-    <ul>
+    <ul id = "classes"  >
+        <style>
+            a:link    {color:red; background-color:transparent; text-decoration:none}
+        </style>
     <li> <a href= "Freshman.html"> Freshman</a>  
     </li>
     <li> <a href= "Sophmore.html"> Sophmore</a>  
