--- a/Freshman.html
+++ b/Freshman.html
@@ -4,7 +4,30 @@
 <title> Freshman </title>
 </head>
 <body BGcolor = green>
+<ul id = "FreshmanClasses"  >
+        <style>
+            a:link    {color:green; background-color:transparent; text-decoration:none}
+        </style>
+	<li> <a href= "Biology.html"> Biology</a>  
+	</li> 
 
+	<li> <a href= "English9.html"> English 9</a> ​
+ 	</li> 
+ 
+	<li> <a href= "HEnglish9.html"> Honors English 9</a>  
+	</li> 
+
+	<li> <a href= "WorldCultures.html"> World Cultures</a>  
+	</li> 
+ 
+	<li> <a href= "Algebra1.html"> Algebra 1</a>  
+	</li> 
+
+	<li> <a href= "HAlgebra1.html"> Honors Algebra 1</a>  
+	</li> 
+
+	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w Trig</a>  
+	</li> 
     
 </body>
 
