--- a/Resources.html
+++ b/Resources.html
@@ -11,6 +11,12 @@
         <a href = "https://www.holynames-sea.org" > Holy Names Academy</a> website </p>
     <p> Link to
         <a href = "https://sms.holynames-sea.org" > Power School </a> </p>
+    <p> Link to
+        <a href = "https://vhlcentral.com" > SuperSite </a> </p>
+    <p> Link to
+        <a href = "http://easybib.com/" > EasyBib Citations </a> </p>
+    <p> Link to
+        <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </p>​
     
 </body>
 
