deleted language links

--- a/Freshman.html
+++ b/Freshman.html
@@ -4,14 +4,16 @@
 <title> Freshman </title>
 </head>
 <body BGcolor = green>
+    <h1 style="color : maroon">
+    </h1>
 <ul id = "FreshmanClasses"  >
         <style>
-            a:link    {color:green; background-color:transparent; text-decoration:none}
+            a:link    {color:black; background-color:transparent; text-decoration:none}
         </style>
 	<li> <a href= "Biology.html"> Biology</a>  
 	</li> 
 
-	<li> <a href= "English9.html"> English 9</a> ​
+	<li> <a href= "English9.html"> English 9</a>
  	</li> 
  
 	<li> <a href= "HEnglish9.html"> Honors English 9</a>  
