reformatted and added freshman heading

--- a/Freshman.html
+++ b/Freshman.html
@@ -5,6 +5,7 @@
 </head>
 <body BGcolor = green>
     <h1 style="color : maroon">
+        Freshman Classes
     </h1>
 <ul id = "FreshmanClasses"  >
         <style>
