Created classes for freshman with upload styling

--- a/Freshman.html
+++ b/Freshman.html
@@ -3,13 +3,13 @@
 <head>
 <title> Freshman </title>
 </head>
-<body BGcolor = green>
+<body>
     <h1 style="color : maroon">
         Freshman Classes
     </h1>
 <ul id = "FreshmanClasses"  >
         <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none}
+            a:link    {color:orange; background-color:transparent; text-decoration:none}
         </style>
 	<li> <a href= "Biology.html"> Biology</a>  
 	</li> 
@@ -29,9 +29,8 @@
 	<li> <a href= "HAlgebra1.html"> Honors Algebra 1</a>  
 	</li> 
 
-	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w Trig</a>  
+	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>  
 	</li> 
     
 </body>
-
 </html>
