--- a/Resources.html
+++ b/Resources.html
@@ -4,6 +4,10 @@
 <title> Resources </title>
 </head>
 <body>
+    <style>
+            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none}
+            a:visited {color: paleturquoise;}
+    </style>
  <h1> Resources </h1>
     <p> Link to  
         <a href = "https://login.microsoftonline.com"> HNA Sharepoint </a> </p>
@@ -16,7 +20,7 @@
     <p> Link to
         <a href = "http://easybib.com/" > EasyBib Citations </a> </p>
     <p> Link to
-        <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </p>​
+        <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </p>
     
 </body>
 
