--- a/Electives.html
+++ b/Electives.html
@@ -4,8 +4,14 @@
 <title> Electives </title>
 </head>
 <body>
+</body>
 
-    
+<body
+      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
+  <input type="file" name="fileField"><br /><br />
+  <input type="submit" name="submit" value="Submit">
+</form>
+
 </body>
 
 </html>
