--- a/HAlgebra1.html
+++ b/HAlgebra1.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Languages </title>
+<title> Honors Algebra 1 </title>
 </head>
 <body>
-    
 </body>
     
-    <body
+<body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
