--- a/Junior.html
+++ b/Junior.html
@@ -6,4 +6,11 @@
 <body>
 </body>
 
+<body
+      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
+  <input type="file" name="fileField"><br /><br />
+  <input type="submit" name="submit" value="Submit">
+</form>
+
+</body>
 </html>
