These are new classes

--- a/Junior.html
+++ b/Junior.html
@@ -4,6 +4,36 @@
 <title> Junior </title>
 </head>
 <body>
+        <h1 style="color : maroon">
+        Junior Classes
+    </h1>
+<ul id = "JuniorClasses"  >
+        <style>
+            a:link    {color:orange; background-color:transparent; text-decoration:none}
+        </style>
+	<li> <a href= "Chemistry.html"> Chemistry</a>  
+	</li> 
+    
+    <li> <a href= "HChemistry.html"> Honors Chemistry</a>  
+	</li> 
+
+	<li> <a href= "English11.html"> English 11</a>
+ 	</li> 
+ 
+	<li> <a href= "HEnglish11.html"> Honors English 11</a>  
+	</li> 
+
+	<li> <a href= "Morality.html"> Morality</a>  
+	</li> 
+ 
+	<li> <a href= "Algebra2.html"> Algebra 2</a>  
+	</li> 
+
+	<li> <a href= "HAlgebra1.html"> Honors Precalculus 1</a>  
+	</li> 
+
+	
+    
 </body>
 
 <body
