I made the rest of the basic grade generic classes and added a home link to every page we have so far

--- a/APEnglish12.html
+++ b/APEnglish12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Morality </title>
+<title> AP English 12 </title>
 </head>
 <body>
 </body>
@@ -13,8 +13,10 @@
 </form>
 
 </body>
+
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+
 </html>
