--- a/English12.html
+++ b/English12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Morality </title>
+<title> English 12 </title>
 </head>
 <body>
 </body>
@@ -13,6 +13,7 @@
 </form>
 
 </body>
+
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
