--- a/Languages.html
+++ b/Languages.html
@@ -4,7 +4,22 @@
 <title> Languages </title>
 </head>
 <body>
-    
+    <li> <a href= "Spanish1.html"> Spanish 1</a>  
+    </li>
+    <li> <a href= "Spanish2.html"> Spanish 2</a>  
+    </li>
+    <li> <a href= "Spanish3.html"> Spanish 3</a>  
+    </li>
+    <li> <a href= "APSpanish.html"> AP Spanish </a>  
+    </li>
+    <li> <a href= "French1.html"> French 1</a>  
+    </li>
+    <li> <a href= "French2.html"> French 2</a>  
+    </li>
+    <li> <a href= "French3.html"> French 3</a>
+    </li>
+    <li> <a href= "APFrench.html"> AP French</a>
+    </li>
 </body>
     
     <body
@@ -14,5 +29,8 @@
 </form>
 
 </body>
-
+<body>
+<li> <a href= "index.html"> Home</a>  
+    </li>
+</body>
 </html>
