--- a/ContemporaryProblems.html
+++ b/ContemporaryProblems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Morality </title>
+<title> Contemporary Problems </title>
 </head>
 <body>
 </body>
@@ -13,8 +13,10 @@
 </form>
 
 </body>
+
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+
 </html>
