--- a/Resources.html
+++ b/Resources.html
@@ -23,5 +23,8 @@
         <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </p>
     
 </body>
-
+<body>
+<li> <a href= "index.html"> Home</a>  
+    </li>
+</body>
 </html>
