--- a/Rules.html
+++ b/Rules.html
@@ -11,5 +11,8 @@
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#parking" > Click here to learn more about parking guidelines </a></p>
     
 </body>
-
+<body>
+<li> <a href= "index.html"> Home</a>  
+    </li>
+</body>
 </html>
