--- a/Spanish1.html
+++ b/Spanish1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Honors English 11 </title>
+<title> Spanish 1 </title>
 </head>
 <body>
 </body>
@@ -13,5 +13,8 @@
 </form>
 
 </body>
-
+<body>
+<li> <a href= "index.html"> Home</a>  
+    </li>
+</body>
 </html>
