Added a little css like headers and text size of links
Just found out that there is a way to do this without typing the same
thing on every file:
Just create a .css type file and name it "StyleSheet" and define the
style changes that you want for a <p> or <a> or whatever similar to how
it is if you do it in each individual file and then just link the header
of whatever file you want to apply the style to as something like <link
href ="style.css" media"screen" rel="stylesheet" type="text/css"/>
inside the header

--- a/APMusicTheory.html
+++ b/APMusicTheory.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Electives </title>
+<title> AP Music Theory </title>
 </head>
 <body>
+    <h1> AP Music Theory</h1>
 </body>
-
+    
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
