--- a/Freshman.html
+++ b/Freshman.html
@@ -9,32 +9,32 @@
     </h1>
 <ul id = "FreshmanClasses"  >
         <style>
-            a:link    {color:orange; background-color:transparent; text-decoration:none}
+            a:link    {color:black; background-color:transparent; text-decoration:none}
         </style>
-	<li> <a href= "Biology.html"> Biology</a>  
+	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
 	</li> 
 
-	<li> <a href= "English9.html"> English 9</a>
+	<li> <a style= "font-size: 20px" href= "English9.html"> English 9</a>
  	</li> 
  
-	<li> <a href= "HEnglish9.html"> Honors English 9</a>  
+	<li> <a style= "font-size: 20px" href= "HEnglish9.html"> Honors English 9</a>  
 	</li> 
 
-	<li> <a href= "WorldCultures.html"> World Cultures</a>  
+	<li> <a style= "font-size: 20px" href= "WorldCultures.html"> World Cultures</a>  
 	</li> 
  
-	<li> <a href= "Algebra1.html"> Algebra 1</a>  
+	<li> <a style= "font-size: 20px" href= "Algebra1.html"> Algebra 1</a>  
 	</li> 
 
-	<li> <a href= "HAlgebra1.html"> Honors Algebra 1</a>  
+	<li> <a style= "font-size: 20px" href= "HAlgebra1.html"> Honors Algebra 1</a>  
 	</li> 
 
-	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>  
+	<li> <a style= "font-size: 20px" href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>  
 	</li> 
     
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
     </li>
 </body>
 </html>
