--- a/Junior.html
+++ b/Junior.html
@@ -9,7 +9,7 @@
     </h1>
 <ul id = "JuniorClasses"  >
         <style>
-            a:link    {color:orange; background-color:transparent; text-decoration:none}
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
         </style>
 	<li> <a href= "Chemistry.html"> Chemistry</a>  
 	</li> 
@@ -36,13 +36,6 @@
     
 </body>
 
-<body
-      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
-  <input type="file" name="fileField"><br /><br />
-  <input type="submit" name="submit" value="Submit">
-</form>
-
-</body>
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
