--- a/Languages.html
+++ b/Languages.html
@@ -4,6 +4,9 @@
 <title> Languages </title>
 </head>
 <body>
+    <style>
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
+        </style>
     <li> <a href= "Spanish1.html"> Spanish 1</a>  
     </li>
     <li> <a href= "Spanish2.html"> Spanish 2</a>  
@@ -22,15 +25,8 @@
     </li>
 </body>
     
-    <body
-      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
-  <input type="file" name="fileField"><br /><br />
-  <input type="submit" name="submit" value="Submit">
-</form>
-
-</body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
     </li>
 </body>
 </html>
