--- a/Resources.html
+++ b/Resources.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <style>
-            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none}
-            a:visited {color: paleturquoise;}
+            a:link    {color:blue; background-color:transparent; text-decoration:none}
+            a:visited {color: blueviolet;}
     </style>
  <h1> Resources </h1>
     <p> Link to  
