--- a/Rules.html
+++ b/Rules.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <h1> Quick Reminders </h1>
+    <style>
+            a:link    {color:blue; background-color:transparent; text-decoration:none}
+            a:visited {color: blueviolet;}
+    </style>
     <p> Dress Code:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#dress" > Click here to learn more about dress code </a></p>
     <p> Parking Guidelines:
