--- a/Sophmore.html
+++ b/Sophmore.html
@@ -9,7 +9,7 @@
     </h1>
 <ul id = "SophmoreClasses"  >
         <style>
-            a:link    {color:orange; background-color:transparent; text-decoration:none}
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
         </style>
 	<li> <a href= "WorldHistory.html"> World History</a>  
 	</li> 
@@ -38,7 +38,7 @@
     
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
     </li>
 </body>
   
