--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title> HNA Website</title>  
+<title> Cougars Homework Help - Home</title>  
 <head>
     <style>
   img { width:100%; }
@@ -20,7 +20,7 @@ body { background: url("seattle.jpg") no-repeat center center fixed;
     <ul id = "classes"  >
     
         <style>
-            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none}
+            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none; font-size: 20px}
             a:visited {color: paleturquoise;}
         </style>
     <li> <a href= "Freshman.html"> Freshman</a>  
@@ -33,7 +33,7 @@ body { background: url("seattle.jpg") no-repeat center center fixed;
     </li>
     <li> <a href= "Languages.html"> Languages</a>  
     </li>
-    <li> <a href= "Electives.html"> Electives</a>  
+    <li> <a href= "APClasses.html"> AP Classes</a>  
     </li>
     <li> <a href= "Resources.html"> Resources</a>  
     </li>
