--- a/APPsychology.html
+++ b/APPsychology.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> AP Physics </title>
+<title> AP Psychology </title>
 </head>
 <body>
-    <h1> AP Physics</h1>
+    <h1> AP Psychology</h1>
 </body>
     
 <body
@@ -14,7 +14,6 @@
 </form>
 
 </body>
-
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
