--- a/Senior.html
+++ b/Senior.html
@@ -10,7 +10,7 @@
     </h1>
 <ul id = "SeniorClasses"  >
         <style>
-            a:link    {color:orange; background-color:transparent; text-decoration:none}
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
         </style>
 	<li> <a href= "Physics.html"> Physics</a>  
 	</li> 
@@ -41,16 +41,8 @@
     
 </body>
 
-    <body
-      <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
-  <input type="file" name="fileField"><br /><br />
-  <input type="submit" name="submit" value="Submit">
-</form>
-
-</body>
-
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
     </li>
 </body>
 </html>
