I went ahead and made the css style sheet so you guys don't need to
Feel free to research the file uploader thing cause thats the main thing
we have left

--- a/APClasses.html
+++ b/APClasses.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <title> AP Classes </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
     
 <body>
     <h1> AP Classes </h1>
-    <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
-        </style>
+    
     <li> <a href= "APSpanish.html"> AP Spanish </a>  
     </li>
     <li> <a href= "APFrench.html"> AP French </a>  
