--- a/Freshman.html
+++ b/Freshman.html
@@ -2,15 +2,14 @@
 <html>
 <head>
 <title> Freshman </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1 style="color : maroon">
+    <h1 >
         Freshman Classes
     </h1>
 <ul id = "FreshmanClasses"  >
-        <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none}
-        </style>
+        
 	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
 	</li> 
 
@@ -34,7 +33,7 @@
     
 </body>
 <body>
-<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
+<li> <a href= "index.html"> Home</a>  
     </li>
 </body>
 </html>
