--- a/Resources.html
+++ b/Resources.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title> Resources </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <style>
-            a:link    {color:blue; background-color:transparent; text-decoration:none}
             a:visited {color: blueviolet;}
     </style>
  <h1> Resources </h1>
