--- a/Rules.html
+++ b/Rules.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <title> Rules </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1> Quick Reminders </h1>
+    
     <style>
-            a:link    {color:blue; background-color:transparent; text-decoration:none}
-            a:visited {color: blueviolet;}
+            a:link    {color:blue;}
     </style>
     <p> Dress Code:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#dress" > Click here to learn more about dress code </a></p>
