--- a/Junior.html
+++ b/Junior.html
@@ -2,15 +2,14 @@
 <html>
 <head>
 <title> Junior </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
-        <h1 style="color : maroon">
+        <h1>
         Junior Classes
     </h1>
 <ul id = "JuniorClasses"  >
-        <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
-        </style>
+    
 	<li> <a href= "Chemistry.html"> Chemistry</a>  
 	</li> 
     
