--- a/Languages.html
+++ b/Languages.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <title> Languages </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
-        </style>
+    <h1> Languages</h1>
     <li> <a href= "Spanish1.html"> Spanish 1</a>  
     </li>
     <li> <a href= "Spanish2.html"> Spanish 2</a>  
