--- a/Senior.html
+++ b/Senior.html
@@ -2,16 +2,15 @@
 <html>
 <head>
 <title> Senior </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-    <h1 style="color : maroon">
+    <h1 >
         Senior Classes
     </h1>
 <ul id = "SeniorClasses"  >
-        <style>
-            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
-        </style>
+        
 	<li> <a href= "Physics.html"> Physics</a>  
 	</li> 
     
