I just added another ink to khan academy

--- a/Resources.html
+++ b/Resources.html
@@ -21,6 +21,8 @@
         <a href = "http://easybib.com/" > EasyBib Citations </a> </p>
     <p> Link to
         <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </p>
+    <p> Link to
+        <a href = "http://www.khanacademy.org" > Khan Academy </a> </p>
     
 </body>
 <body>
