took away bullet points

--- a/Freshman.html
+++ b/Freshman.html
@@ -9,7 +9,9 @@
         Freshman Classes
     </h1>
 <ul id = "FreshmanClasses"  >
-        
+    <style>
+        ul{list-style-type: none;}
+    </style>
 	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
 	</li> 
 
