--- a/Junior.html
+++ b/Junior.html
@@ -10,6 +10,9 @@
     </h1>
 <ul id = "JuniorClasses"  >
     
+     <style>
+        ul{list-style-type: none;}
+    </style>
 	<li> <a href= "Chemistry.html"> Chemistry</a>  
 	</li> 
     
