I got rid of the bullet points and fixed a few formatting errors

--- a/Freshman.html
+++ b/Freshman.html
@@ -8,7 +8,7 @@
     <h1 >
         Freshman Classes
     </h1>
-<ul id = "FreshmanClasses"  >
+<ul id = "FreshmanClasses"></ul>
         
 	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
 	</li> 
