--- a/Senior.html
+++ b/Senior.html
@@ -9,7 +9,7 @@
     <h1 >
         Senior Classes
     </h1>
-<ul id = "SeniorClasses"  >
+<ul id = "SeniorClasses"></ul>
         
 	<li> <a href= "Physics.html"> Physics</a>  
 	</li> 
