--- a/Sophmore.html
+++ b/Sophmore.html
@@ -9,7 +9,7 @@
     <h1>
         Sophmore Classes
     </h1>
-<ul id = "SophmoreClasses"  >
+<ul id = "SophmoreClasses"></ul>
         
 	<li> <a href= "WorldHistory.html"> World History</a>  
 	</li> 
