--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title> Cougars Homework Help - Home</title>  
 <head>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
     <style>
   img { width:100%; }
 </style>
@@ -17,7 +18,7 @@ body { background: url("seattle.jpg") no-repeat center center fixed;
         Cougars Homework Help
     </h1>
     
-    <ul id = "classes"  >
+    <ul id = "classes">
     
         <style>
             a:link    {color:paleturquoise; background-color:transparent; text-decoration:none; font-size: 20px}
