--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title> Cougars Homework Help - Home</title>  
 <head>
+    <script src="jquery.js"> </script>
     <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
     <style>
   img { width:100%; }
