--- a/APClasses.html
+++ b/APClasses.html
@@ -7,6 +7,10 @@
     
 <body>
     <h1> AP Classes </h1>
+    <style>
+            a:link    {color:hotpink; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: hotpink;}
+        </style>
     
     <li> <a href= "APSpanish.html"> AP Spanish </a>  
     </li>
@@ -44,7 +48,9 @@
 </body>
 
 <body>
+<p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    </p>
 </body>
 </html>
