--- a/Freshman.html
+++ b/Freshman.html
@@ -8,6 +8,11 @@
     <h1 >
         Freshman Classes
     </h1>
+    
+    <style>
+            a:link    {color:forestgreen; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: forestgreen;}
+        </style>
 <ul id = "FreshmanClasses"></ul>
 	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
 	</li> 
@@ -32,7 +37,9 @@
     
 </body>
 <body>
+<p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    </p>
 </body>
 </html>
