--- a/Languages.html
+++ b/Languages.html
@@ -7,6 +7,11 @@
 <body>
     <h1> Languages</h1>
     <ul id="Languages"></ul>
+    
+    <style>
+            a:link    {color:magenta; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: magenta;}
+        </style>
     <li> <a href= "Spanish1.html"> Spanish 1</a>  
     </li>
     <li> <a href= "Spanish2.html"> Spanish 2</a>  
@@ -26,7 +31,9 @@
 </body>
     
 <body>
+    <p>
 <li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
     </li>
+    </p>
 </body>
 </html>
