--- a/Resources.html
+++ b/Resources.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <style>
-            a:visited {color: blueviolet;}
-    </style>
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: black;}
+        </style>
  <h1> Resources </h1>
     <p> Link to  
         <a href = "https://login.microsoftonline.com"> HNA Sharepoint </a> </p>
@@ -26,7 +27,9 @@
     
 </body>
 <body>
+<p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    </p>
 </body>
 </html>
