--- a/Rules.html
+++ b/Rules.html
@@ -8,8 +8,9 @@
     <h1> Quick Reminders </h1>
     
     <style>
-            a:link    {color:blue;}
-    </style>
+            a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: black;}
+        </style>
     <p> Dress Code:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#dress" > Click here to learn more about dress code </a></p>
     <p> Parking Guidelines:
@@ -17,7 +18,9 @@
     
 </body>
 <body>
+<p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+</p>
 </body>
 </html>
