--- a/Senior.html
+++ b/Senior.html
@@ -10,6 +10,10 @@
         Senior Classes
     </h1>
 <ul id = "SeniorClasses"></ul>
+    <style>
+            a:link    {color:red; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: red;}
+        </style>
         
 	<li> <a href= "Physics.html"> Physics</a>  
 	</li> 
@@ -41,7 +45,9 @@
 </body>
 
 <body>
-<li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
-    </li>
+    <p>
+        <li> <a style= "font-size: 20px" href= "index.html"> Home</a>  
+        </li>
+    </p>
 </body>
 </html>
