--- a/Junior.html
+++ b/Junior.html
@@ -7,6 +7,10 @@
 <body>
         <h1>Junior Classes</h1>
 <ul id = "JuniorClasses"></ul>
+    <style>
+            a:link    {color:blue; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:visited {color: blue;}
+        </style>
     
 	<li> <a href= "Chemistry.html"> Chemistry</a>  
 	</li>   
@@ -27,7 +31,9 @@
 </body>
 
 <body>
+<p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    </p>
 </body>
 </html>
