--- a/Morality.html
+++ b/Morality.html
@@ -15,7 +15,13 @@
 
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+
+<li type = none> <a href= "index.html"> Home</a>  
     </li>
+    
+</body>
+<body>
+<a href = "prayer.docx">Prayer</a>
+
 </body>
 </html>
