--- a/English11.html
+++ b/English11.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> English 11 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> English 11</h1>
