--- a/French1.html
+++ b/French1.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> French 1 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> French 1</h1>
