--- a/HEnglish10.html
+++ b/HEnglish10.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Honors English 10 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Honors English 10</h1>
