--- a/HEnglish9.html
+++ b/HEnglish9.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Honors English 9 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Honors English 9</h1>
