--- a/Scriptures.html
+++ b/Scriptures.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Scriptures </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Scriptures</h1>
