--- a/Spanish2.html
+++ b/Spanish2.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Spanish 2 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Spanish 2</h1>
