--- a/APBiology.html
+++ b/APBiology.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Biology </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Biology</h1>
