--- a/APCalculusAB.html
+++ b/APCalculusAB.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Calculus AB </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Calculus AB</h1>
