--- a/APCalculusBC.html
+++ b/APCalculusBC.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Calculus BC </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Calculus BC</h1>
