--- a/APCompSci.html
+++ b/APCompSci.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Computer Science </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Computer Science</h1>
