--- a/APEnglish12.html
+++ b/APEnglish12.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP English 12 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP English 12</h1>
