--- a/APEnviornmentalScience.html
+++ b/APEnviornmentalScience.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Enviornmental Science </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Enviornmental Science</h1>
