--- a/APMusicTheory.html
+++ b/APMusicTheory.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Music Theory </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Music Theory</h1>
