--- a/APStatistics.html
+++ b/APStatistics.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP Statistics </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP Statistics</h1>
