--- a/APUSH.html
+++ b/APUSH.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP US History </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP US History</h1>
