--- a/APWorldHistory.html
+++ b/APWorldHistory.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> AP World History </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> AP World History</h1>
