--- a/Algebra1.html
+++ b/Algebra1.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Algebra 1 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Algebra 1</h1>
