--- a/Algebra2.html
+++ b/Algebra2.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Algebra 2 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Algebra 2</h1>
