--- a/Chemistry.html
+++ b/Chemistry.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Chemistry </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Chemistry</h1>
