--- a/English10.html
+++ b/English10.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> English 10 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Enlish 10</h1>
