--- a/French3.html
+++ b/French3.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> French 3 </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> French 3</h1>
