--- a/Geometry.html
+++ b/Geometry.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Geometry </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Geometry</h1>
