--- a/HAlgebra2.html
+++ b/HAlgebra2.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Honors Algebra 2 w/ Trig </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Honors algebra 2 w/Trig</h1>
