--- a/HChemistry.html
+++ b/HChemistry.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Honors Chemistry </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Honors Chemistry</h1>
