--- a/Physics.html
+++ b/Physics.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> Physics </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> Physics</h1>
