--- a/USHistory.html
+++ b/USHistory.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> US History </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> US History</h1>
