--- a/WorldHistory.html
+++ b/WorldHistory.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title> World History </title>
+        <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <h1> World History</h1>
