--- a/HChemistry.html
+++ b/HChemistry.html
@@ -20,4 +20,8 @@
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+<body>
+<a href = "chem%20tips.docx">Chemistry Tips for Elements</a>
+
+</body>
 </html>
