took out came and added images

--- a/Freshman.html
+++ b/Freshman.html
@@ -9,30 +9,35 @@
         Freshman Classes
     </h1>
     
+     <style>
+body { background: url("greentrees.jpg") no-repeat center center fixed;
+      background-size: cover;
+      }
+    </style>
     <style>
-            a:link    {color:forestgreen; background-color:transparent; text-decoration:none; font-size: 20px}
-            a:visited {color: forestgreen;}
+            a:link    {color:white; background-color:transparent; text-decoration:none; font-size: 35px; font-weight: bold}
+            a:visited {color: white;}
         </style>
 <ul id = "FreshmanClasses"></ul>
-	<li> <a style= "font-size: 20px" href= "Biology.html"> Biology</a>  
+	<li> <a href= "Biology.html"> Biology</a>  
 	</li> 
 
-	<li> <a style= "font-size: 20px" href= "English9.html"> English 9</a>
+	<li> <a href= "English9.html"> English 9</a>
  	</li> 
  
-	<li> <a style= "font-size: 20px" href= "HEnglish9.html"> Honors English 9</a>  
+	<li> <a href= "HEnglish9.html"> Honors English 9</a>  
 	</li> 
 
-	<li> <a style= "font-size: 20px" href= "WorldCultures.html"> World Cultures</a>  
+	<li> <a href= "WorldCultures.html"> World Cultures</a>  
 	</li> 
  
-	<li> <a style= "font-size: 20px" href= "Algebra1.html"> Algebra 1</a>  
+	<li> <a href= "Algebra1.html"> Algebra 1</a>  
 	</li> 
 
-	<li> <a style= "font-size: 20px" href= "HAlgebra1.html"> Honors Algebra 1</a>  
+	<li> <a href= "HAlgebra1.html"> Honors Algebra 1</a>  
 	</li> 
 
-	<li> <a style= "font-size: 20px" href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>  
+	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>  
 	</li> 
     
 </body>
