added pictures to pages

--- a/Freshman.html
+++ b/Freshman.html
@@ -15,7 +15,7 @@ body { background: url("greentrees.jpg") no-repeat center center fixed;
       }
     </style>
     <style>
-            a:link    {color:white; background-color:transparent; text-decoration:none; font-size: 35px; font-weight: bold}
+            a:link    {color:white; background-color:transparent; text-decoration:none;}
             a:visited {color: white;}
         </style>
 <ul id = "FreshmanClasses"></ul>
