--- a/Sophmore.html
+++ b/Sophmore.html
@@ -10,9 +10,16 @@
         Sophmore Classes
     </h1>
 <ul id = "SophmoreClasses"></ul>
+    
     <style>
-            a:link    {color:gold; background-color:transparent; text-decoration:none; font-size: 20px}
-            a:visited {color: gold;}
+body { background: url("traffic.jpg") no-repeat center center fixed;
+      background-size: cover;
+      }
+    </style>
+    
+    <style>
+            a:link    {color:white; background-color:transparent; text-decoration:none;}
+            a:visited {color: white;}
         </style>
 	<li> <a href= "WorldHistory.html"> World History</a>  
 	</li> 
