--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body { background: url("seattle.jpg") no-repeat center center fixed;
     <ul id = "classes">
     
         <style>
-            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none; font-size: 20px}
+            a:link    {color:paleturquoise; background-color:transparent; text-decoration:none;}
             a:visited {color: paleturquoise;}
         </style>
     <li> <a href= "Freshman.html"> Freshman</a>  
