--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
     <style>
-body { background: url("seattle.jpg") no-repeat center center fixed;
+        body { background: url("seattle.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
@@ -42,5 +42,62 @@ body { background: url("seattle.jpg") no-repeat center center fixed;
     <li> <a href= "Rules.html"> Rules</a>  
     </li>
     </ul>
+</body>
+<!--<style>
+#header {
+    background-color:white;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:white;
+    height:300px;
+    width:100px;
+    float:center;
+}
+#section {
+    background: url("seattle.jpg") no-repeat center center fixed;
+    background-size: cover;
+    float:left;
+    text-decoration-color: white;
+ 
+}
+ a:link    {color:paleturquoise; background-color:transparent; text-decoration:none;}
+ a:visited {color: paleturquoise;}
+
+</style>
+
+<body>
+    <div id ="header">
+        <h1>Cougars Homework Help</h1>
+    </div>
+    
+    <div id="nav">
+    <li> <a href= "Freshman.html"> Freshman</a>  
+    </li> <br>
+    <li> <a href= "Sophmore.html"> Sophmore</a>  
+    </li> <br>
+    <li> <a href= "Junior.html"> Junior</a>  
+    </li> <br>
+    <li> <a href= "Senior.html"> Senior</a>  
+    </li> <br>
+    <li> <a href= "Languages.html"> Languages</a>  
+    </li> <br>
+    <li> <a href= "APClasses.html"> AP Classes</a>  
+    </li> <br>
+    <li> <a href= "Resources.html"> Resources</a>  
+    </li> <br>
+    <li> <a href= "Rules.html"> Rules</a>  
+    </li> <br>
+    </div>
+
+<div id="section">
+<p>
+This is a wesite where students can share studyguides, flashcards, notes, ect. It is designed not to encourage plagerism, but to offer help with homework. Students may find their designated class in which they can upload information and gain information.
+</p>
+</div>-->
+
 </body>
 </html>
