--- a/APArtHistory.html
+++ b/APArtHistory.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <h1> AP Art History</h1>
+    //naming the page
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  //code to upload files to a server
 </form>
 
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a href= "index.html"> Home</a> 
+//creating home button
     </li>
 </body>
 </html>
