--- a/APBiology.html
+++ b/APBiology.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <h1> AP Biology</h1>
+    //creating title
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  //code to submit the file to the server
 </form>
 
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a href= "index.html"> Home</a> 
+//creating home button
     </li>
 </body>
 </html>
