--- a/APCalculusBC.html
+++ b/APCalculusBC.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <h1> AP Calculus BC</h1>
+    //creating page title
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  //code to upload files to the server
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+//home button
     </li>
 </body>
 </html>
