--- a/APEnviornmentalScience.html
+++ b/APEnviornmentalScience.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <h1> AP Enviornmental Science</h1>
+    //titles the page
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  //submits files to server
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+//creates a home button
     </li>
 </body>
 </html>
