--- a/APArtHistory.html
+++ b/APArtHistory.html
@@ -20,7 +20,7 @@
 </body>
 <body>
 <li> <a href= "index.html"> Home</a> 
-//creating home button
+<!--creating home button-->
     </li>
 </body>
 </html>
