--- a/APArtHistory.html
+++ b/APArtHistory.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h1> AP Art History</h1>
-    //naming the page
+    <!--naming the page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //code to upload files to a server
+  <!--code to upload files to a server-->
 </form>
 
 </body>
