--- a/Languages.html
+++ b/Languages.html
@@ -26,11 +26,9 @@ body { background: url("map.jpg") no-repeat center center fixed;
         height: 100%;
         width: 100%;
 }
+     a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 35px}
+     a:visited {color: black;}
     
- a:link    {color:paleturquoise; background-color:transparent; text-decoration:none;}
- a:visited {color: paleturquoise;}
-
-
 </style>
 
 <body>
