--- a/Rules.html
+++ b/Rules.html
@@ -25,8 +25,8 @@ body { background: url("pink.jpg") no-repeat center center fixed;
         width: 100%;
 }
     
- a:link    {color:paleturquoise; background-color:transparent; text-decoration:none;}
- a:visited {color: paleturquoise;}
+ a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
+ a:visited {color: black;}
 
 
 </style>
@@ -37,12 +37,12 @@ body { background: url("pink.jpg") no-repeat center center fixed;
     </div>
     
     <div id="section">
-    <p> Dress Code:
+    <li> Dress Code:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#dress" > Click here to learn more about dress code </a>
-        </p>
-    <p> Parking Guidelines:
+        </li>
+    <li> Parking Guidelines:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#parking" > Click here to learn more about parking guidelines </a>
-        </p>
+        </li>
     <li> <a href= "index.html"> Home</a>  
     </li>
   <br>
