--- a/WorldCultures.html
+++ b/WorldCultures.html
@@ -7,17 +7,20 @@
 </head>
 <body>
     <h1> World Cultures</h1>
+    <!--titles page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates homepage-->
     </li>
 </body>
 </html>
