Still working on format

--- a/APBiology.html
+++ b/APBiology.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP Biology</h1>
+    <h2> AP Biology</h2>
     //creating title
 </body>
     
@@ -23,4 +24,5 @@
 //creating home button
     </li>
 </body>
+</div>
 </html>
