--- a/APEnglish12.html
+++ b/APEnglish12.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP English 12</h1>
+    <h2> AP English 12</h2>
     //titles page
 </body>
     
@@ -24,5 +25,5 @@
 //creates a home button
     </li>
 </body>
-
+</div>
 </html>
