--- a/APMusicTheory.html
+++ b/APMusicTheory.html
@@ -5,8 +5,10 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
+
 <body>
-    <h1> AP Music Theory</h1>
+    <h2> AP Music Theory</h2>
     //titles page
 </body>
     
@@ -23,4 +25,5 @@
 //creates home button
     </li>
 </body>
+</div>
 </html>
