--- a/APPhysics.html
+++ b/APPhysics.html
@@ -5,8 +5,10 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
+
 <body>
-    <h1> AP Physics</h1>
+    <h2> AP Physics</h2>
     //titles page
 </body>
     
@@ -24,4 +26,5 @@
 //creates home button
     </li>
 </body>
+</div>
 </html>
