--- a/APPsychology.html
+++ b/APPsychology.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP Psychology</h1>
+    <h2> AP Psychology</h2>
     //titles page
 </body>
     
@@ -23,4 +24,5 @@
 //creates home button
     </li>
 </body>
+</div>
 </html>
