--- a/APUSH.html
+++ b/APUSH.html
@@ -5,8 +5,10 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
+
 <body>
-    <h1> AP US History</h1>
+    <h2> AP US History</h2>
 </body>
     
 <body
@@ -20,4 +22,5 @@
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+</div>
 </html>
