--- a/ContemporaryProblems.html
+++ b/ContemporaryProblems.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> Contemporary Problems</h1>
+    <h2> Contemporary Problems</h2>
 </body>
     
 <body
@@ -21,5 +22,5 @@
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
-
+</div>
 </html>
