--- a/English12.html
+++ b/English12.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Englsih 12</h1>
+    <h2> Englsih 12</h2>
 </body>
     
 <body
