--- a/French2.html
+++ b/French2.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> French 2</h1>
+    <h2> French 2</h2>
 </body>
     
 <body
