--- a/HAlgebra1.html
+++ b/HAlgebra1.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Honors Algebra 1</h1>
+    <h2> Honors Algebra 1</h2>
 </body>
     
 <body
