--- a/HAlgebra2.html
+++ b/HAlgebra2.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Honors algebra 2 w/Trig</h1>
+    <h2> Honors algebra 2 w/Trig</h2>
 </body>
     
 <body
