--- a/Morality.html
+++ b/Morality.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <title> Morality </title>
+    <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
+<div id="container">
 <body>
-    <h1> Morality</h1>
+    <h2> Morality</h2>
 </body>
     
 <body
@@ -21,7 +23,8 @@
     
 </body>
 <body>
-<a href = "prayer.docx">Prayer</a>
-
+<li> <a href = "prayer.docx">Prayer</a>
+    </li>
 </body>
+</div>
 </html>
