--- a/WorldCultures.html
+++ b/WorldCultures.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> World Cultures</h1>
+    <h2> World Cultures</h2>
 </body>
     
 <body
