--- a/APArtHistory.html
+++ b/APArtHistory.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP Art History</h1>
+    <h2> AP Art History</h2>
     <!--naming the page-->
 </body>
     
@@ -23,4 +24,5 @@
 <!--creating home button-->
     </li>
 </body>
+</div>
 </html>
