--- a/APCalculusAB.html
+++ b/APCalculusAB.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP Calculus AB</h1>
+    <h2> AP Calculus AB</h2>
     //creating a title
 </body>
     
@@ -23,4 +24,5 @@
 //creating home button
     </li>
 </body>
+</div>
 </html>
