--- a/APCalculusBC.html
+++ b/APCalculusBC.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP Calculus BC</h1>
+    <h2> AP Calculus BC</h2>
     //creating page title
 </body>
     
@@ -23,4 +24,5 @@
 //home button
     </li>
 </body>
+</div>
 </html>
