--- a/APFrench.html
+++ b/APFrench.html
@@ -5,8 +5,10 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
+
 <body>
-    <h1> AP French</h1>
+    <h2> AP French</h2>
     //titles the page
 </body>
     
@@ -23,4 +25,5 @@
 //creates a home button
     </li>
 </body>
+</div>
 </html>
