--- a/APWorldHistory.html
+++ b/APWorldHistory.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+    <div id="container">
 <body>
-    <h1> AP World History</h1>
+    <h2> AP World History</h2>
 </body>
     
 <body
@@ -20,4 +21,5 @@
 <li> <a href= "index.html"> Home</a>  
     </li>
 </body>
+</div>
 </html>
