--- a/HEnglish11.html
+++ b/HEnglish11.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Honors English 11</h1>
+    <h2> Honors English 11</h2>
 </body>
     
 <body
