--- a/HGeometry.html
+++ b/HGeometry.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Honors Geometry</h1>
+    <h2> Honors Geometry</h2>
 </body>
     
 <body
