--- a/HPrecalculus.html
+++ b/HPrecalculus.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Honors Precalculus</h1>
+    <h2> Honors Precalculus</h2>
 </body>
     
 <body
