--- a/Spanish1.html
+++ b/Spanish1.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Spanish 1</h1>
+    <h2> Spanish 1</h2>
 </body>
     
 <body
