--- a/Spanish2.html
+++ b/Spanish2.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> Spanish 2</h1>
+    <h2> Spanish 2</h2>
 </body>
     
 <body
