--- a/USHistory.html
+++ b/USHistory.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> US History</h1>
+    <h2> US History</h2>
 </body>
     
 <body
