--- a/WorldHistory.html
+++ b/WorldHistory.html
@@ -5,8 +5,9 @@
         <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 
 </head>
+<div id="container">
 <body>
-    <h1> World History</h1>
+    <h2> World History</h2>
 </body>
     
 <body
