--- a/Sophmore.html
+++ b/Sophmore.html
@@ -10,6 +10,7 @@ body { background: url("traffic.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
+    <!--adds a background picture-->
     
 </body>
 
@@ -28,10 +29,12 @@ body { background: url("traffic.jpg") no-repeat center center fixed;
 }
 
 </style>
+<!--continues the style of other pages-->
 
 <body>
     <div id ="header">
         <h1>Sophmore Classes</h1>
+        <!--titles page-->
     </div>
     
     <div id="nav">
@@ -58,8 +61,10 @@ body { background: url("traffic.jpg") no-repeat center center fixed;
 
 	<li> <a href= "HPrecalculus.html"> Honors Precalculus</a>  
 	</li>
+	<!--listd the links to sophomore pages-->
     <p>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
     </p>
   <br>
