--- a/Senior.html
+++ b/Senior.html
@@ -11,7 +11,7 @@ body { background: url("sunset.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
-    
+          <!--creates a bakgorund image-->
 </body>
 
 <style>
@@ -29,7 +29,7 @@ body { background: url("sunset.jpg") no-repeat center center fixed;
 }
 
 </style>
-
+<!--continues style of other pages-->
 <body>
     <div id ="header">
         <h1>Senior Classes</h1>
@@ -62,6 +62,7 @@ body { background: url("sunset.jpg") no-repeat center center fixed;
     
     <li> <a href= "APUSH.html"> AP US History</a>  
 	</li> 
+	<!--lists links to senior classes-->
     <p>
 <li> <a href= "index.html"> Home</a>  
     </li>
